--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "auto-complete-code-webpack-plugin",
+  "name": "@trinasolar/auto-complete-code-webpack-plugin",
   "version": "0.0.1",
   "description": "自动补全套路代码",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
